--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,10 @@ body {
 } */
 
 body {
-    font-family: Montserrat, sans-serif;
+    font-family: Helvetica, sans-serif;
     font-weight: normal;
     line-height: 1.5;
+    background-image: url(./img/bg.png);
 }
 
 * {
@@ -47,12 +48,6 @@ img {
 input,
 button {
     font: inherit;
-}
-/* ------------------------------
-BODY STYLES 
---------------------------------*/
-body {
-    background-image: url(./img/bg.png);
 }
 
 /* ------------------------------
@@ -72,4 +67,102 @@ PRIMARY SITE HEADER
 
 .page__header--logo {
     margin: 0 auto;
+}
+
+/* ------------------------------
+CONTEST FORM 
+--------------------------------*/
+.contest {
+    margin: 15px auto 33px;
+    max-width: 670px;
+    background-color: #fff;
+    box-shadow: 0 7px 14px rgba(110, 183, 194, 0.37);
+}
+
+.contest__header {
+    padding: 15px 20px;
+    background-color: #545253;
+    color: #fff;
+    text-align: center;
+}
+
+.contest__header h2 {
+    margin: 0 auto;
+    max-width: 300px;
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+.contest__form {
+    padding: 24px;
+}
+
+.contest__form--input {
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    border-radius: 4px;
+    border: solid 1px #d8d8d8;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.5);
+    color: #747375;
+    line-height: 1.875;
+}
+
+.input-flex {
+    display: flex;
+    justify-content: space-between;
+    gap: 11px;
+}
+
+.input-flex div:first-child {
+    flex-basis: 60%;
+}
+
+.input-flex div:last-child {
+    flex-basis: 40%;
+}
+
+.button-flex {
+    display: flex;
+    justify-content: center;
+}
+
+.contest__form--button {
+    padding: 12px;
+    flex-basis: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 50px;
+    background-color: #f6931d;
+    color: #ffffff;
+    letter-spacing: 0.85px;
+    text-transform: uppercase;
+}
+
+/* ------------------------------
+MEDIA QUERIES 
+--------------------------------*/
+@media (min-width: 767px) {
+    .contest {
+        margin-top: 33px;
+    }
+
+    .contest__form {
+        padding: 28px 55px;
+    }
+
+    .contest__form--input {
+        padding: 10px 25px;
+    }
+
+    .input-flex {
+        gap: 25px;
+    }
+
+    .contest__form--button {
+        flex-basis: 60%;
+    }
 }
