--- a/styles.css
+++ b/styles.css
@@ -23,22 +23,20 @@ BASE RESET
     box-sizing: border-box;
 }
 
-/* Allow percentage based heights in the application as 100vh will take up more than 100% of the screen on mobile devices */
-/* html,
-body {
-    height: 100%;
-} */
-
 body {
     font-family: Helvetica, sans-serif;
     font-weight: normal;
-    line-height: 1.5;
+    line-height: 1.2;
     background-image: url(./img/bg.png);
     color: #545253;
 }
 
 * {
     margin: 0;
+}
+
+h2 {
+    line-height: 1.2;
 }
 
 img {
@@ -97,7 +95,6 @@ CONTEST FORM
     max-width: 300px;
     font-size: 1.125rem;
     font-weight: 400;
-    line-height: 1.3;
 }
 
 .contest__form {
@@ -153,7 +150,7 @@ ADVERTORIAL
 --------------------------------*/
 .advertorial {
     max-width: 404px;
-    margin: 0 auto;
+    margin: 0 auto 92px;
 }
 
 .advertorial fieldset {
@@ -175,6 +172,7 @@ ADVERTORIAL
 }
 
 .advertorial__content--header p.header-highlight {
+    margin-bottom: 5px;
     font-size: 0.75rem;
     color: #a0bc57;
     text-transform: uppercase;
@@ -184,12 +182,10 @@ ADVERTORIAL
     margin-bottom: 12px;
     font-size: 1.25rem;
     font-weight: 400;
-    line-height: 1.2;
 }
 
 .advertorial__content p {
     font-size: 0.875rem;
-    line-height: 1.2;
 }
 
 .advertorial__content p > a.read-more {
