--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ CONTEST FORM
     color: #ffffff;
     letter-spacing: 0.85px;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 /* ------------------------------
